<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wapp">

    <fragment
        android:id="@+id/navigation_wapp"
        android:name="com.example.ssaver.ui.wapp.WappFragment"
        tools:layout="@layout/fragment_wapp">
        <action
            android:id="@+id/action_wapp_to_permission"
            app:destination="@id/navigation_permission" />
    </fragment>

    <fragment
        android:id="@+id/navigation_permission"
        android:name="com.example.ssaver.ui.permission.PermissionFragment"
        android:label="@string/permission_required"
        tools:layout="@layout/fragment_permission">
        <action
            android:id="@+id/action_permission_to_wapp"
            app:destination="@id/navigation_wapp"
            app:popUpTo="@id/navigation_wapp"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.example.ssaver.ui.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.ssaver.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>